src/objects/Company_Details__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Details of the Company Using this App</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beneficiary_A_c_Name__c</fullName>
        <label>Beneficiary A/c Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_A_c_No__c</fullName>
        <label>Beneficiary A/c No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank__c</fullName>
        <label>Beneficiary Bank</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_City__c</fullName>
        <label>Company City</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Country__c</fullName>
        <label>Company Country</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Postal_Code__c</fullName>
        <label>Company Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_State__c</fullName>
        <label>Company State</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Street__c</fullName>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Term_1__c</fullName>
        <label>Invoice Payment Term 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Term_2__c</fullName>
        <label>Invoice Payment Term 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Term_3__c</fullName>
        <label>Invoice Payment Term 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Payment_Term_1__c</fullName>
        <label>Sales Order Payment Term 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Payment_Term_2__c</fullName>
        <label>Sales Order Payment Term 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Payment_Term_3__c</fullName>
        <label>Sales Order Payment Term 3</label>
        <type>TextArea</type>
    </fields>
    <label>Company Details</label>
</CustomObject>